<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/listStyle"
                    android:layout_marginRight="24dp"
                    android:textStyle="bold"
                    android:text="@string/artist"/>
                <TextView
                    android:id="@+id/artistName"
                    style="@style/listStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/listStyle"
                    android:layout_marginRight="24dp"
                    android:textStyle="bold"
                    android:text="@string/album"/>
                <TextView
                    android:id="@+id/albumName"
                    android:gravity="center_horizontal"
                    style="@style/listStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/listStyle"
                    android:layout_marginRight="24dp"
                    android:textStyle="bold"
                    android:text="@string/song"/>
                <TextView
                    android:id="@+id/songName"
                    style="@style/listStyle" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/smallplaybutton"
            android:layout_alignParentRight="true">
        </ImageView>
    </RelativeLayout>


</LinearLayout>